version/0.24/_sources/examples/00-fluent/index.rst.txt


.. _sphx_glr_examples_00-fluent:

Simulation Examples
===================
These examples show you how you can use Fluent capabilities from Python to perform
Fluent simulations. This includes geometry import, Fluent's meshing workflows,
setting up and running the solver, and reviewing the results using Fluent's
postprocessing capabilities.


.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Design of Experiments and Machine Learning model building">

.. only:: html

  .. image:: /examples/00-fluent/images/thumb/sphx_glr_DOE_ML_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-fluent_DOE_ML.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Design of Experiments and Machine Learning model building</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Ahmed Body External Aerodynamics Simulation">

.. only:: html

  .. image:: /examples/00-fluent/images/thumb/sphx_glr_ahmed_body_workflow_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-fluent_ahmed_body_workflow.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Ahmed Body External Aerodynamics Simulation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Objective: ==========">

.. only:: html

  .. image:: /examples/00-fluent/images/thumb/sphx_glr_brake_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-fluent_brake.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Automotive Brake Thermal Analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example uses the guided workflow for fault-tolerant meshing because it is appropriate for geometries that can have imperfections, such as gaps and leakages.">

.. only:: html

  .. image:: /examples/00-fluent/images/thumb/sphx_glr_exhaust_system_settings_api_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-fluent_exhaust_system_settings_api.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Fault-tolerant meshing workflow using settings objects</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example uses the guided workflow for watertight geometry meshing because it is appropriate for geometries that can have no imperfections, such as gaps and leakages.">

.. only:: html

  .. image:: /examples/00-fluent/images/thumb/sphx_glr_external_compressible_flow_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-fluent_external_compressible_flow.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Modeling External Compressible Flow</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example uses settings objects.">

.. only:: html

  .. image:: /examples/00-fluent/images/thumb/sphx_glr_mixing_elbow_settings_api_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-fluent_mixing_elbow_settings_api.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Fluent setup and solution using settings objects</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example uses the multiphase modeling capability of Ansys Fluent, and will be able to predict the strong cavitation near the orifice after flow separation at a sharp edge.">

.. only:: html

  .. image:: /examples/00-fluent/images/thumb/sphx_glr_modeling_cavitation_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-fluent_modeling_cavitation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Modeling Cavitation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Workflow tasks">

.. only:: html

  .. image:: /examples/00-fluent/images/thumb/sphx_glr_radiation_headlamp_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-fluent_radiation_headlamp.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Modeling Radiation in a Headlamp Using the Monte Carlo Method</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples/00-fluent/DOE_ML
   /examples/00-fluent/ahmed_body_workflow
   /examples/00-fluent/brake
   /examples/00-fluent/exhaust_system_settings_api
   /examples/00-fluent/external_compressible_flow
   /examples/00-fluent/mixing_elbow_settings_api
   /examples/00-fluent/modeling_cavitation
   /examples/00-fluent/radiation_headlamp

